# emu

./: .buildinfo  .gitignore  MANIFEST.in  PDil_AT_V1.m  PDil_AT_V1.m~  PDil_AT_V2.m  PDil_AT_V2.m~  PDil_AT_V3.m  PDil_AT_V3.m~  PDil_AT_V4.m  PDil_AT_V5.m  PDil_AT_V6.m  PDilemma_V1.m  README.md  README.rst  aed_load.html  api.html  box_integration.html  build.py  cli.py  data_sources.md  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  pt6305-day2-preprocessing.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  start_notebook.sh  tox.ini  tox.ini.old
PDil/: PDilM01Test29.xls  PDil_AT_V10.m  PDil_AT_V11.m  PDil_AT_V13.m  PDil_AT_V2.m  PDil_AT_V3.m  PDil_AT_V5.m  PDil_AT_V7.m  PDil_AT_V8.m  PDil_AT_V9.m  PDil_questions_V1.m  PDil_questions_V2.m  PDil_sandbox.m
_autosummary/: emu.auth.html  emu.html  emu.luigi.box.html  emu.luigi.html  emu.meds.html  emu.names.html  emu.neuralynx_io.html  emu.nwb.html  emu.pdil.html  emu.pdil.raw.html  emu.pipeline.download.html  emu.pipeline.html  emu.pipeline.process.html  emu.pipeline.remote.html  emu.pipeline.timestamps.html  emu.pipeline.utils.html  emu.process_videos.html  emu.utils.html
_sources/: aed_load.ipynb  api.rst  pt6305-day2-preprocessing.ipynb
autoapi/: index.html
ci/: bootstrap.py
docs/: CNAME  _config.yml  _toc.yml  aed_load.ipynb  api.rst  box_integration.md  intro.md  pt6305-day2-preprocessing.ipynb
emu/: cli.py  data_managers.py  download.py  ephys.py  neuralynx_io.py  nwb.py  process_videos.py  utils.py
notebooks/: README.md  (+11 more)
(+135 files in other folders)
