[tool.poetry]
name = "emu"
version = "0.2.4"
readme='README.md'
description="Library for processing large recordings from epilepsy monitoring units"
authors = ["Elijah Christensen <ejd.christensen@gmail.com>"]
license = "BSD-2-Clause"
repository='https://github.com/elijahc/emu'
packages = [
    { include = "emu", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
boxsdk = {extras = ["jwt"], version = "^2.10.0"}
luigi = "^3.0.2"
numpy = "^1.19.0"
scipy = "^1.5.1"
neo = "^0.9.0"
tqdm = "^4.54.0"
pandas = "^1.1.0"
click = "^7.1.2"
datajoint = "^0.13.2"
pynwb = "^1.4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-book = "^0.12.1"
ghp-import = "^2.0.2"
sphinx-autoapi = "^1.8.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
